# SandboxHub

./: .env  .env.example  .gitignore  README.md  README_CN.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-03-31-sandboxhub-monorepo.md
docs/superpowers/specs/: 2026-03-31-sandboxhub-monorepo-design.md
images/ubuntu/: Dockerfile
images/ubuntu/app/: __init__.py  main.py  mcp_server.py  requirements.txt
images/ubuntu/app/routers/: __init__.py  browser.py  browser_cdp.py  file.py  keyboard.py  mouse.py  process.py  screen.py  system.py  terminal.py
images/ubuntu/app/tools/: __init__.py  base.py  bash.py  computer.py  edit.py  run.py
images/ubuntu/scripts/: entrypoint.sh  openbox_startup.sh  start_all.sh  xvfb_startup.sh  xvnc_startup.sh
images/ubuntu/tests/: test_bash.py  test_bash_stream.py  test_terminal_stream.py
src/: config.py  main.py  models.py
src/manager/: container_manager.py  registry.py  warm_pool.py
src/proxy/: forwarder.py
src/routers/: proxy.py  sandboxes.py
src/sandboxhub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: test_sandboxes_api.py
tests/unit/: test_container_manager.py  test_forwarder.py  test_registry.py  test_sandboxhub_ping.py  test_warm_pool.py
